--- a/hoctuvung-frontend/src/pages/DangKy/DangKy.css
+++ b/hoctuvung-frontend/src/pages/DangKy/DangKy.css
@@ -55,11 +55,18 @@
   font-weight: 600;
   font-size: 18px;
   color: #333;
+  opacity: 1;
+  border-bottom: 2px solid transparent;
+  display: inline-block;
+  transition: all 0.2s ease;
 }
 
-.signup-tabs .active {
+.signup-tabs span.active {
+  opacity: 0.7;
   border-bottom: 2px solid #007bff;
+  transform: scale(1.1);
 }
+
 
 .signup-form {
   display: flex;
