--- a/hoctuvung-frontend/src/pages/DangNhap/Dangnhap.css
+++ b/hoctuvung-frontend/src/pages/DangNhap/Dangnhap.css
@@ -46,7 +46,7 @@
   flex-direction: row;
   justify-content: flex-start;
   margin-bottom: 20px;
-  gap:20px;
+  gap: 20px;
   flex-shrink: 0;
 }
 
@@ -55,11 +55,17 @@
   font-weight: 600;
   font-size: 18px;
   color: #333;
+  display: inline-block;
+  border-bottom: 2px solid transparent; /* để giữ layout khi chưa active */
+  transition: all 0.2s ease; /* mượt mà */
 }
 
-.login-tabs .active {
+.login-tabs span.active {
   border-bottom: 2px solid #007bff;
+  transform: scale(1.1); /* phóng to mượt */
+  opacity: 0.8; /* thêm hiệu ứng nhẹ */
 }
+
 
 .login-btn.social {
   display: flex;
