--- a/hoctuvung-frontend/src/components/GiangVien/Header/header.css
+++ b/hoctuvung-frontend/src/components/GiangVien/Header/header.css
@@ -8,7 +8,6 @@
   border-radius: 6px;
   gap: 16px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-  
 }
 
 .left-section,
@@ -39,34 +38,34 @@
 }
 
 .search-section {
+  flex:1;
+  position: relative;
   display: flex;
   align-items: center;
-  position: relative;
-  flex-grow: 1;
+  width: 100%;
   max-width: 400px;
-  cursor: text;
 }
 
 .search-icon {
   position: absolute;
-  left: 12px;
+  left: 100px;
   color: #777;
   font-size: 16px;
-  transition: color 0.2s;
+  pointer-events: none; 
 }
 
 .search-input {
   width: 100%;
-  padding: 8px 12px 8px 36px;
+  padding: 8px 12px 8px 36px; 
   border: 1px solid #ccc;
   border-radius: 20px;
   font-size: 16px;
   outline: none;
-  transition: border-color 0.3s, box-shadow 0.3s;
   background-color: white;
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.search-input:focus {
+.search-input:focus{
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
 }
@@ -74,6 +73,8 @@
 .search-input:focus + .search-icon,
 .search-section:focus-within .search-icon {
   color: #007bff;
+   border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
 }
 
 .btn-upgrade {
